--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         </h3>
       </tr>
       <tr>
-        <th><a href="rizwantradersrt.rf.gd">Home</a></th>
+        <th><a href="https://raseefa.github.io/ahmad/">Home</a></th>
         <th><a href="about.html">About</a></th>
         <th><a href="photo.html">Photo</a></th>
         <th><a href="contact.html">Contact</a></th>
