--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ h1{
         </h3>
       </tr>
       <tr>
-        <th bgcolor="white"><a href="https://rizwantradersrt.rf.gd/">Home</a></th>
+        <th bgcolor="white"><a href="https://raseefa.github.io/ahmad/">Home</a></th>
         <th bgcolor="white"><a href="about.html">About</a></th>
         <th bgcolor="white"><a href="photo.html">Photo</a></th>
         <th bgcolor="white"><a href="contact.html">Contact</a></th>
