--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@ h1{
         <th bgcolor="white"><a href="https://raseefa.github.io/ahmad/">Home</a></th>
         <th bgcolor="white"><a href="about.html">About</a></th>
         <th bgcolor="white"><a href="photo.html">Photo</a></th>
-        <th bgcolor="white"><a href="contact.html">Contact</a></th>
+        <th bgcolor="white"><a href="contact.html">Contact</a>
+        <th bgcolor="white"><a href="login.html">Login</a>
+        </th>
       </tr>
     </table>
   </h2>
