--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ h1{
   <h2>
     <table border="0px" width="100%" height="7px" align="right">
       <tr>
-        <h3>
+        <h3> <th aling="right><a href="login.html">Login</a>
           <th colspan="4" bgcolor="black">
             <font color="white">RIZWAN TRADERS<br>
               MOHAMMADABAD GOHNA</font>
@@ -44,7 +44,6 @@ h1{
         <th bgcolor="white"><a href="about.html">About</a></th>
         <th bgcolor="white"><a href="photo.html">Photo</a></th>
         <th bgcolor="white"><a href="contact.html">Contact</a>
-        <th bgcolor="white"><a href="login.html">Login</a>
         </th>
       </tr>
     </table>
